# injector-templates

./: Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
configs/: jupyter_notebook_config.py
lab/: 1-simple_injector.ipynb  1-simple_injector.py
