[tool.poetry]
name = "injector-templates"
version = "0.1.0"
description = "lists some injector templates"
authors = ["Hironori Yamamoto <mr.nikoru918@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.1.2"
jupytext = "^1.4.2"
injector = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8"
pep8-naming = "^0.8.2"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
